# naive-tower-defense

./: .clang-format  .gitmodules  CMakeLists.txt
assets/: basic.fs  basic.vs
engine/: CMakeLists.txt
engine/src/: camera-2d.cc  camera-2d.h  color.cc  color.h  common.h  dense-pool.h  ecs.cc  ecs.h  engine-core.cc  engine-core.h  engine.h  event.h  file-reader.cc  file-reader.h  gl.cc  gl.h  image.cc  image.h  log.cc  log.h  platform-window.cc  platform-window.h  readable-stream.h  renderer.cc  renderer.h  scene-manager.cc  scene.cc  scene.h  scene_manager.h  shader.cc  shader.h  string_id.h  system.cc  system.h  texture.cc  texture.h  transform.cc  transform.h  type_id.h  vec2.h  (+4 more)
src/: main.cc
